Ещё мелкие правки

--- a/catalog.html
+++ b/catalog.html
@@ -39,11 +39,11 @@
         </nav>
       </div>
   </header>
-	<section class="catalog">
+	<main class="catalog">
 		<div class="container">
-			<h2>Моноподы для селфи</h2>
+			<h1>Моноподы для селфи</h1>
 			<div class="breadcrumbs">
-				<p><a href="">Главная</a> <a href="">Каталог товаров</a> <a href="">Моноподы для селфи</a></p>
+				<p><a href="">Главная</a> <a href="">Каталог товаров</a> <span>Моноподы для селфи</span></p>
 			</div>
 		</div>
 		<div class="container-wide">
@@ -107,7 +107,7 @@
 				</div>
 			</section>
 		</div>
-	</section>
+	</main>
 	<footer>
 	  <div class="container">
 	  	<p class="logo">DEVICE</p>
