--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
 				</div>
 				<ul class="catalog-paginator">
 					<li><a href="#prev">Назад</a></li>
-					<li class="paginator-current-page">1</li>
+					<li class="paginator-current-page"><a>1</a></li>
 					<li><a href="#2">2</a></li>
 					<li><a href="#3">3</a></li>
 					<li><a href="#next">Вперед</a></li>
