--- a/catalog.html
+++ b/catalog.html
@@ -106,9 +106,9 @@
 						<img src="img/item-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
 					</article>
 					<article class="catalog-item">
-						<h3>Селфи-палка &#171Следуй за мной&#187</h3>
+						<h3>Селфи-палка &#171;Следуй за мной&#187;</h3>
 						<p><b>4 500 руб.</b></p>
-						<img src="img/item-1.jpg" width="360" height="380" alt="Селфи-палка &#171Следуй за мной&#187">
+						<img src="img/item-1.jpg" width="360" height="380" alt="Селфи-палка "Следуй за мной"">
 					</article>
 				</div>
 				<ul class="catalog-paginator">
