--- a/catalog.html
+++ b/catalog.html
@@ -9,15 +9,15 @@
   <header>
     <div class="container">
       <p class="logo"><a href="index.html">DEVICE</a></p>
-        <form>
+        <form action="" method="post">
           <button type="submit" name="search">Поиск</button>
           <input type="search" name="search-field" placeholder="Поиск по сайту" />
         </form>
-        <div class="user-block"><span>Валентин Петухов</span> <a href="">Выйти</a></div>
-        <div class="cart-section">
+        <p class="user-block"><span>Валентин Петухов</span> <a href="">Выйти</a></p>
+        <p class="cart-section">
           <a class="compare" href="">Сравнить</a>
           <a class="cart" href="">Корзина</a>
-        </div>
+        </p>
         <nav class="main-nav">
           <ul>
           	<li>Каталог товаров
@@ -141,10 +141,10 @@
 	        <p>Тел.: +7 (495) 495-95-95</p>
 	      </div>
 	      <div class="footer-social-area">
-	      	<p class="social">
-	      		<a href="">Facebook</a>
-	      		<a href="">Instagram</a>
-	      		<a href="">Twitter</a>
+	      	<p>
+						<a class="social social-fb" href="">Facebook</a>
+	      		<a class="social social-in" href="">Instagram</a>
+	      		<a class="social social-tw" href="">Twitter</a>
 	      	</p>
 					<p><a href="">HTML Academy</a></p>
 	      </div>
