--- a/catalog.html
+++ b/catalog.html
@@ -9,49 +9,51 @@
   <header>
     <div class="container">
       <p class="logo"><a href="index.html">DEVICE</a></p>
-        <form action="" method="post">
-          <button type="submit" name="search">Поиск</button>
-          <input type="search" name="search-field" placeholder="Поиск по сайту" />
-        </form>
-        <p class="user-block"><span>Валентин Петухов</span> <a href="">Выйти</a></p>
+      <form action="url" method="post">
+        <button type="submit" name="search">Поиск</button>
+        <input type="search" name="search-field" placeholder="Поиск по сайту" />
+      </form>
+      <div class="user-block">
+        <p>Валентин Петухов</p> <a href="#">Выйти</a>
         <p class="cart-section">
-          <a class="compare" href="">Сравнить</a>
-          <a class="cart" href="">Корзина</a>
+          <a class="compare" href="#">Сравнить</a>
+          <a class="cart" href="#">Корзина</a>
         </p>
-        <nav class="main-nav">
-          <ul>
-            <li>Каталог товаров
-              <div class="catalog-submenu">
-                <ul>
-                  <li><a href="">Виртуальная реальность</a></li>
-                  <li><a href="">Моноподы для селфи</a></li>
-                  <li><a href="">Экшн-камеры</a></li>
-                  <li><a href="">Фитнес-браслеты</a></li>
-                  <li><a href="">Умные часы</a></li>
-                  <li><a href="">Квадрокоптеры</a></li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Контакты</a></li>
-          </ul>
-        </nav>
+      </div>
+      <nav class="main-nav">
+        <ul>
+          <li>Каталог товаров
+            <div class="catalog-submenu">
+              <ul>
+                <li><a href="#">Виртуальная реальность</a></li>
+                <li><a href="#">Моноподы для селфи</a></li>
+                <li><a href="#">Экшн-камеры</a></li>
+                <li><a href="#">Фитнес-браслеты</a></li>
+                <li><a href="#">Умные часы</a></li>
+                <li><a href="#">Квадрокоптеры</a></li>
+              </ul>
+            </div>
+          </li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
       </div>
   </header>
   <main class="catalog">
     <div class="container">
       <h1>Моноподы для селфи</h1>
       <ul class="breadcrumbs">
-          <li><a href="">Главная</a></li>
-          <li><a href="">Каталог товаров</a></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Каталог товаров</a></li>
           <li class="current-page">Моноподы для селфи</li>
         </ul>
     </div>
     <div class="container-wide">
       <section class="catalog-filter">
         <h3>Фильтр:</h3>
-        <form action="">
+        <form action="url" method="get">
           <fieldset>
             <legend>Стоимость</legend>
             <div class="price-range-slider"></div>
@@ -80,35 +82,35 @@
         <h2 class="hidden-header">Страница каталога</h2>
         <div class="catalog-sort">
           <p>Сортировка:
-            <a href="">По цене</a>
-            <a href="">По типу</a>
-            <a href="">По популярности</a>
+            <a href="#">По цене</a>
+            <a href="#">По типу</a>
+            <a href="#">По популярности</a>
           </p>
-          <p>
+          <div class="ascending-descending">
             <label><input type="radio" name="sort-direction">По возрастанию</label>
             <label><input type="radio" name="sort-direction">По убыванию</label>
-          </p>
+          </div>
         </div>
         <div class="catalog-items">
           <article class="catalog-item">
             <h3>Любительская селфи-палка</h3>
-            <p><b>500 руб.</b></p>
+            <p>500 руб.</p>
             <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           </article>
           <article class="catalog-item">
             <h3>Профессиональная селфи-палка</h3>
-            <p><b>1 500 руб.</b></p>
+            <p>1 500 руб.</p>
             <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
           </article>
           <article class="catalog-item">
             <h3>Непотопляемая селфи-палка</h3>
-            <p><b>2 500 руб.</b></p>
+            <p>2 500 руб.</p>
             <img src="img/item-1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           </article>
           <article class="catalog-item">
             <h3>Селфи-палка &#171;Следуй за мной&#187;</h3>
-            <p><b>4 500 руб.</b></p>
-            <img src="img/item-1.jpg" width="360" height="380" alt="Селфи-палка "Следуй за мной"">
+            <p>4 500 руб.</p>
+            <img src="img/item-1.jpg" width="360" height="380" alt="Селфи-палка &#171;Следуй за мной&#187;">
           </article>
         </div>
         <ul class="catalog-paginator">
@@ -125,28 +127,28 @@
     <div class="container">
       <p class="logo">DEVICE</p>
       <div class="footer-user-area">
-        <p class="user-block"><a href="">Выйти</a></p>
+        <p class="user-block"><a href="#">Выйти</a></p>
         <p>
-          <a class="compare" href="">Сравнить</a>
-          <a class="cart" href="">Корзина</a>
+          <a class="compare" href="#">Сравнить</a>
+          <a class="cart" href="#">Корзина</a>
         </p>
       </div>
         <div class="footer-menu-area">
           <p>г. Москва, ул. Строителей, 15</p>
           <p class="footer-menu">
-            <a href="">Доставка</a>
-            <a href="">Гарантия</a>
-            <a href="">Контакты</a>
+            <a href="#">Доставка</a>
+            <a href="#">Гарантия</a>
+            <a href="#">Контакты</a>
           </p>
           <p>Тел.: +7 (495) 495-95-95</p>
         </div>
         <div class="footer-social-area">
           <p>
-            <a class="social social-fb" href="">Facebook</a>
-            <a class="social social-in" href="">Instagram</a>
-            <a class="social social-tw" href="">Twitter</a>
+            <a class="social social-fb" href="#">Facebook</a>
+            <a class="social social-in" href="#">Instagram</a>
+            <a class="social social-tw" href="#">Twitter</a>
           </p>
-          <p><a href="">HTML Academy</a></p>
+          <p><a class="html-academy" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a></p>
         </div>
       </div>
     </footer>
