--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Device</title>
+  <title>Device - Главная</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="container">
-      <p class="logo">DEVICE</p>
+      <div class="logo"><img src="img/logo.svg" alt="Device"></div>
       <form action="url" method="get">
         <button type="submit" name="search">Поиск</button>
         <input type="search" name="search-field" placeholder="Поиск по сайту" />
